--- a/arch/arm/src/rp2040/Kconfig
+++ b/arch/arm/src/rp2040/Kconfig
@@ -101,7 +101,7 @@ if RP2040_UART1
 endif
 
 #####################################################################
-#  SPI Configuration
+#  SPI Master Configuration
 #####################################################################
 
 config RP2040_SPI
@@ -140,23 +140,38 @@ if RP2040_SPI
 			by polling logic.  But we need a threshold value to determine what
 			is small.  That value is provided by RP2040_SPI_DMATHRESHOLD.
 
-	config RP2040_SPI_DRIVER
-		bool "SPI character driver"
-		default y
-		select SPI_DRIVER
-		---help---
-			Build in support for a character driver at /dev/spi[N] that may be
-			used to perform SPI bus transfers from applications.  The intent of
-			this driver is to support SPI testing.
-
 endif # RP2040_SPI
 
 #####################################################################
-#  I2C Configuration (Master)
+#  SPI Slave Configuration
+#####################################################################
+
+config SPI_SLAVE
+	bool "SPI Slave Mode Support"
+	select SPI
+	---help---
+		Build in support for SPI slave mode.
+
+if SPI_SLAVE
+
+	config RP2040_SPI0_SLAVE
+		bool "SPI0"
+		---help---
+			See the Board Selection menu to configure the pins used by SPI0
+
+	config RP2040_SPI1_SLAVE
+		bool "SPI1"
+		---help---
+			See the Board Selection menu to configure the pins used by SPI1
+
+endif # SPI_SLAVE
+
+#####################################################################
+#  I2C Master Configuration
 #####################################################################
 
 config RP2040_I2C
-	bool "I2C Master"
+	bool "I2C Master Mode Support"
 	select I2C
 	---help---
 		Build in support for I2C master mode.
@@ -189,11 +204,11 @@ if RP2040_I2C
 endif # RP2040_I2C
 
 #####################################################################
-#  I2C Configuration (Slave)
+#  I2C Slave Configuration
 #####################################################################
 
 config RP2040_I2C_SLAVE
-	bool "I2C Slave"
+	bool "I2C Slave Mode Support"
 	select I2C_SLAVE
 	---help---
 		Build in support for I2C slave mode.
